--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,18 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-app
+  name: nodejs-hello-world
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my-app
+      app: nodejs-hello-world
   template:
     metadata:
       labels:
-        app: my-app
+        app: nodejs-hello-world
     spec:
       containers:
-      - name: my-app
-        image: umutcskn681/helloworldapp
-
+      - name: nodejs-container
+        image: umutcskn681/nodes
+        ports:
+        - containerPort: 3000
