--- a/service.yaml
+++ b/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: my-app-service
 spec:
   selector:
-    app: my-app
+    app: nodejs-hello-world
   ports:
     - protocol: TCP
       port: 80      
