--- a/service.yaml
+++ b/service.yaml
@@ -8,5 +8,4 @@ spec:
   ports:
     - protocol: TCP
       port: 80      
-      targetPort: 3000 
-  type: NodePort
+      targetPort: LoadBalancer 
