--- a/service.yaml
+++ b/service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-service
+  name: hello-world-service
 spec:
   selector:
-    app: nodejs-hello-world
+    app: hello-world
   ports:
     - protocol: TCP
-      port: 80      
-      targetPort: ClusterIp 
+      port: 80
+      targetPort: 8080
+      nodePort: 30007
+  type: NodePort
