--- a/service.yaml
+++ b/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: hello-world-service
 spec:
   selector:
-    app: hello-world
+    app: nodejs-hello-world
   ports:
     - protocol: TCP
       port: 80
