--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: nodejs-container
-        image: umutcskn681/nodes
+        image: umutcskn681/node-app:latest
         ports:
         - containerPort: 3000
