--- a/service.yaml
+++ b/service.yaml
@@ -8,6 +8,5 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8081
-      nodePort: 30007
-  type: NodePort
+      targetPort: 80
+  type: LoadBalancer
