--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: hello-world-service
+  name: my-service
 spec:
   selector:
-    app: nodejs-hello-world
+    name: nodejs-hello-world
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 80
-  type: LoadBalancer
+      targetPort: 9376
