--- a/service.yaml
+++ b/service.yaml
@@ -3,9 +3,11 @@ kind: Service
 metadata:
   name: my-service
 spec:
+  type: NodePort
   selector:
     name: nodejs-hello-world
   ports:
     - protocol: TCP
       port: 80
       targetPort: 9376
+      nodePort: 30080  # İsteğe bağlı, belirli bir portu sabitlemek için
